rs/type-registry/tests/ui/unsupported_union.stderr
error: Unions are not supported by SailsTypeRegistry
 --> tests/ui/unsupported_union.rs:4:7
  |
4 | union MyUnion {
  |       ^^^^^^^
